# oneSolver

./: .clang-format  .gitignore  .gitlab-ci.yml  AdditionalTestExhaustive.md  CMakeLists.txt  Doxyfile  LICENSE  README.md
app/: CMakeLists.txt  one-solver-anneal.cpp
benchmarks/annealing/: README  Snakefile  anngeometricongpugen9.csv  anngeomonxeon.csv  annlinearongpugen9.csv  annlinearonxeon.csv  annplot.py  performance.md  plot.py  report.sh  report.tex
benchmarks/annealing/chimera_droplets_qbsolv/128power/: 001.txt
benchmarks/annealing/chimera_droplets_qbsolv/2048power/: 001.txt
benchmarks/annealing/chimera_droplets_qbsolv/512power/: 001.txt
benchmarks/annealing/results/128/: 001.csv  groundstates_TN.txt
benchmarks/annealing/results/2048/: groundstates_TN.txt
benchmarks/annealing/results/512/: 001.csv  groundstates_TN.txt
benchmarks/annealing/scripts/: convert_qbsolv_to_coo.py  merge.py
benchmarks/exhaustive_search/: benchmark.py  devcloudperformance.md  exhongpugen9.csv  exhongpugen9.xlsx  exhonxeon.csv  exhonxeon.xlsx  exhresplots.py  perfomance.md
benchmarks/exhaustive_search/examples/: csp13.qubo  csp5.qubo  csp7.qubo  dwave_doc.qubo  mvp18.qubo  mvp19.qubo  mvp20.qubo  mvp21.qubo  mvp22.qubo  mvp23.qubo  mvp24.qubo  mvp25.qubo  mvp26.qubo  mvp27.qubo  mvp28.qubo  mvp29.qubo  mvp30.qubo  simple.qubo  test1.qubo  test2.qubo
documents/: README.MD  README.md
include/exhaustive/: exhaustive.hpp
include/helpers/: devices.hpp  hash.hpp  insert.hpp  qubo_helpers.hpp  ulong_to_vec.hpp
include/model/: qubo.hpp  solution.hpp
include/simulated_annealing/: annealing.hpp  device_rng.hpp
src/: CMakeLists.txt  one-solver-anneal.cpp  one-solver-exhaustive.cpp
tests/: CMakeLists.txt  devices_test.cpp  exhaustive_test.cpp  io_test.cpp  qubo_helpers_test.cpp  qubo_test.cpp
tests/utils/: qubo_csp_generator.py
utils/: exact_solver.py  qubo_mvc_generator.py
utils/devcloud/: README.md  nodes.sh  qsnodes.sh
utils/devcloud/pbs/: README.md  mpibuild.sh  mpirunann.sh  mpirunexh.sh
